# tct-common

./: stack.yaml  tct-common.cabal
src/Tct/Common/: Answer.hs  Applicable.hs  CeTA.hs  Graph.hs  Orientation.hs  Polynomial.hs  PolynomialInterpretation.hs  ProofCombinators.hs  SMT.hs
