Name:               tct-common
Version:            3.0.0
Author:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
  Georg Moser <georg.moser@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
  Maria Schett <maria.schett@uibk.ac.at>
Maintainer:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
  Georg Moser <georg.moser@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
  Maria Schett <maria.schett@uibk.ac.at>
Category: Program Analysis
Stability: Experimental
License: BSD3
License-file: LICENSE
Homepage: http://cl-informatik.uibk.ac.at/software/tct/
Synopsis: A Complexity Analysis Framework
Description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving 
  resource bounds for different formal systems. This package provides 
  some common functionalities.

Cabal-version: >= 1.8
Build-type: Simple

Library
  hs-source-dirs:
    src
  exposed-modules:
    Tct.Common.Polynomial
    Tct.Common.PolynomialInterpretation
    Tct.Common.ProofCombinators
    Tct.Common.Ring
    Tct.Common.SMT
  build-depends:
    containers     >= 0.5 && < 0.6,
    mtl            >= 2.1 && < 2.2,
    base           == 4.*,
    parsec         == 3.1.*,

    slogic         == 0.*,
    tct-core       == 3.*
  ghc-options:
    -j -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions: 
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses

