name:          tct-common
version:       3.1.0
stability:     experimental
author:
  Martin Avanzini, Andreas Kochesser, Georg Moser, Michael Schaper, Maria Schett
maintainer:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
  Maria Schett <maria.schett@uibk.ac.at>
license:       BSD3
license-file:  LICENSE
category:      Program Analysis
synopsis:      A Complexity Analysis Framework
description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving 
  resource bounds for different formal systems. This package provides 
  some common functionalities.
build-type:    Simple
cabal-version: >= 1.8

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/tct-common

library
  hs-source-dirs:
    src
  exposed-modules:
    Tct.Common.CeTA
    Tct.Common.Graph
    Tct.Common.Polynomial
    Tct.Common.PolynomialInterpretation
    Tct.Common.ProofCombinators
    Tct.Common.Ring
    Tct.Common.SMT
  build-depends:
    base           == 4.*,
    bytestring     == 0.10.*,
    containers     >= 0.5 && < 0.6,
    fgl            == 5.5.*,
    fgl-visualize  == 0.1.0.*,
    mtl            >= 2.1 && < 2.3,
    parsec         == 3.1.*,
    temporary      == 1.2.0.*,

    slogic         == 0.*,
    tct-core       == 3.*
  ghc-options:
    -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions: 
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses

